--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,13 +1,20 @@
-image: Ubuntu1804  # образ для сборки
-stack: node 12  # окружение
+environment:
+  nodejs_version: "18"
+
 branches:
   only:
     - master  # ветка git
+    - main
+
 cache: node_modules  # кеширование
+
 install:
   - npm install  # команда установки зависимостей
+
 build: off  # отключаем встроенную в appveyor систему сборки
+
 build_script:
   - npm run build   # команда сборки
+
 test_script:
   - npm run lint && npm test  # скрипт тестирования
